--- a/client/app/account/add_book.html
+++ b/client/app/account/add_book.html
@@ -39,13 +39,16 @@
           <textarea class="form-control" ng-model="book.description" placeholder="Description"></textarea>
         </div>
         <div class="form-group">
-          <label>Image URL</label>
+          <label>Image url</label>
           <input type="text" class="form-control" ng-model="book.image_url" placeholder="Image URL">
         </div>
-        <!-- <div class="form-group">
-          <label>Buy URL</label>
-          <input type="text" class="form-control" ng-model="book.buy_url" placeholder="Buy URL">
-        </div> -->
+
+       <!--  /////// ////duaa add downloadurl////////// -->
+        <div class="form-group">
+          <label>Download url</label>
+          <input type="text" class="form-control" ng-model="book.download_url" placeholder="Download url">
+        </div>
+  
        <div style="text-align: center;"><button type="submit" class="btn btn-primary btn-lg">Add Book</button></div>
         
       </form>
