(feat ) add hyperlink

--- a/client/app/account/showbooks.html
+++ b/client/app/account/showbooks.html
@@ -17,6 +17,7 @@
           <p><span style="color: #380001">genre : </span>{{books.genre}}</p>
           <p><span style="color: #380001"> publisher : </span>{{books.publisher}}</p>
           <p><span style="color: #380001">pages : </span>{{books.pages}}</p>
+          <p><span style="color: #380001"  > download : </span><a href="{{books.download_url}}">click here to download </a></p>
           <p style="color:#380001">simple description :</p>
           <p>{{books.description}}</p>
         </div>
@@ -25,3 +26,4 @@
   </div>
 </div>
 </div>
+
