--- a/client/index.html
+++ b/client/index.html
@@ -24,6 +24,10 @@
 					</li>
 					<li><a href="#/books">Library</a>
 					</li>
+					<li><a href="#/orders">Orders</a>
+					</li>
+					<li><a href="#/books/add2">books</a>
+					</li>
 					<li><a href="#/signin">SignIn</a>
 					</li>
 					<li><a href="#/signup">Sign Up</a>
@@ -60,6 +64,7 @@
 	<script src="lib/angular/angular.js"></script>
 	<script src="lib/angular-route/angular-route.js"></script>
 	<script src="app/account/books.js"></script>
+	<script src="app/account/Order.js"></script>
 	<script src="app/account/auth.js"></script>
 	<script src="app/main/main.js"></script>
 	<script src="app/services.js"></script>
