--- a/client/index.html
+++ b/client/index.html
@@ -8,27 +8,25 @@
 	<link rel="stylesheet" type="text/css" href="style/bootstrap/css/bootstrap.min.css"/>
 	<!-- <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"> -->
 </head>
-<body ng-app='books'>
+<body ng-app='books' >
 	<!-- <div class="container"></div> -->
-	<div id="custom-bootstrap-menu" class="navbar navbar-default " role="navigation">
+	<div id="custom-bootstrap-menu"  class="navbar navbar-default " role="navigation"  >
 		<div class="container">
 			<div class="navbar-header"><a class="navbar-brand" href="#">Bookstore </a>
-				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-menubuilder"><span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
-				</button>
 			</div>
-			<div class="collapse navbar-collapse navbar-menubuilder">
-				<ul class="nav navbar-nav navbar-left">
+				<ul class="nav navbar-nav navbar-left" >
 					<li checked><a href="#/main">Home</a>
 					</li>
 					<li><a href="#/aboutus">About Us</a>
 					</li>
 					<li><a href="#/books">Library</a>
 					</li>
-					<li><a href="#/signin">SignIn</a>
+					
+					<li ng-show="!loggedIN" class="signin" ><a href="#/signin">SignIn</a>
 					</li>
-					<li><a href="#/signup">Sign Up</a>
+					<li  class="signup"><a href="#/signup" >Sign Up</a>
 					</li>
-					<li><a href="#/signout">sign out</a>
+					<li ng-show="!loggedIN" class="signout"><a href="#/signout" >sign out</a>
 					</li>
 				</ul>
 				<ul class="nav navbar-nav navbar-right">
@@ -38,6 +36,7 @@
 
 			</div>
 		</div>
+	</div>
 	</div>
 	<ng-view></ng-view>
 	<style>
@@ -54,6 +53,9 @@
 	<!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script> -->
 	<!-- Latest compiled JavaScript -->
 	<!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script> -->
+	<!-- <script type="text/javascript">
+	
+	</script> -->
 
 	<script src="style/bootstrap/js/bootstrap.min.js"></script>
 	<script src="lib/jquery.js"></script>
