--- a/client/app/account/aboutus.html
+++ b/client/app/account/aboutus.html
@@ -36,7 +36,7 @@
 <div id="map" style="width:800px; margin:0 auto;">
 <div map-lazy-load="https://maps.google.com/maps/api/js?key=AIzaSyCbzxz8MTo6G_tIkvrgqf3dfyFoqpshIwA&callback=initMap"
   map-lazy-load-params="{{googleMapsUrl}}">
-  <ng-map id="map-canvas" center="31.9701807,35.8297013" zoom="15">
+  <ng-map id="map-canvas" center="31.970,35.832" zoom="15">
   <marker position="31.970,35.832"
           on-click="vm.toggleBounce()"
           animation="DROP"
