--- a/client/index.html
+++ b/client/index.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
 	<link rel='stylesheet prefetch' href='http://fonts.googleapis.com/css?family=Open+Sans:600'>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCbzxz8MTo6G_tIkvrgqf3dfyFoqpshIwA&callback=initMap"></script>
-
+    
 	<link rel="stylesheet" href="style/style.css">
 	<link rel="stylesheet" type="text/css" href="style/bootstrap/css/bootstrap.min.css"/>
 	<!-- <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"> -->
@@ -74,7 +74,8 @@
 	<script src="app/main/main.js"></script>
 	<script src="app/services.js"></script>
 	<script src="app/app.js"></script>
-	<script src="/bower_components/ngmap/build/scripts/ng-map.min.js"></script>
+	<!-- <script src="/bower_components/ngmap/build/scripts/ng-map.min.js"></script> -->
+	<script src="http://rawgit.com/allenhwkim/angularjs-google-maps/master/build/scripts/ng-map.min.js"></script>
 	<script src="app/main/js/jssor.slider-22.2.6.mini.js" type="text/javascript"></script>
 	
 </body>
