(feat ) add category field

--- a/client/app/account/add_book.html
+++ b/client/app/account/add_book.html
@@ -13,12 +13,12 @@
           <input type="text" class="form-control" ng-model="book.title" placeholder="Title">
         </div>
         <div class="form-group">
-          <label>Genre</label>
-          <select ng-model="book.genre" class="form-control">
-            <option value="Suspense">Suspense</option>
-            <option value="Drama">Drama</option>
+          <label>category</label>
+          <select ng-model="book.category" class="form-control">
+            <option value="children">children</option>
+            <option value="biography">biography</option>
             <option value="Romance">Romance</option>
-            <option value="NonFiction">NonFiction</option>
+            <option value="science">science</option>
             <option value="Other" >Other</option>
           </select>
         </div>
@@ -34,6 +34,9 @@
           <label>Pages</label>
           <input type="text" class="form-control" ng-model="book.pages" placeholder="Pages">
         </div>
+
+
+
         <div class="form-group">
           <label>Description</label>
           <textarea class="form-control" ng-model="book.description" placeholder="Description"></textarea>
@@ -57,3 +60,107 @@
     </div>
   </div>
 </div>
+
+
+
+<!-- //////////////////////////science/////////////////////////
+pic:http://www.motionmountain.net/IMAGES/minicover.jpg
+name :motionmountain part 1
+http://www.motionmountain.net/motionmountain-volume1.pdf
+name :motionmountain part 2
+http://www.motionmountain.net/motionmountain-volume2.pdf
+name :motionmountain part 3
+http://www.motionmountain.net/motionmountain-volume3.pdf
+name :motionmountain part 4
+http://www.motionmountain.net/motionmountain-volume4.pdf
+name :motionmountain part 5
+http://www.motionmountain.net/motionmountain-volume5.pdf
+name :motionmountain part 6
+http://www.motionmountain.net/motionmountain-volume6.pdf
+//////////////////////////science/////////////////////////
+
+
+
+
+
+/////////////////romance//////////////////////
+name : The nigger of the "Narcissus"
+pic:https://ia600800.us.archive.org/zipview.php?zip=/17/items/olcovers604/olcovers604-L.zip&file=6047808-L.jpg
+https://www.archive.org/stream/niggerofnarcissu00conrrich?ref=ol#page/2/mode/2up
+
+name :The life of the bee
+pic:https://ia800507.us.archive.org/zipview.php?zip=/1/items/olcovers636/olcovers636-L.zip&file=6367866-L.jpg
+https://www.archive.org/stream/lifeofbe00mae?ref=ol#page/n7/mode/2up
+
+name : Athalie
+pic: https://ia800808.us.archive.org/zipview.php?zip=/32/items/olcovers561/olcovers561-L.zip&file=5613878-L.jpg
+https://www.archive.org/stream/athalietragdi00raci?ref=ol#page/n5/mode/2up
+
+
+name:The master of Ballantrae 
+pic:https://ia600800.us.archive.org/zipview.php?zip=/17/items/olcovers604/olcovers604-L.zip&file=6045363-L.jpg 
+https://www.archive.org/stream/masterofballantr00steviala?ref=ol#page/n5/mode/2up
+
+
+name:Rewards and fairies 
+pic: https://ia600808.us.archive.org/zipview.php?zip=/25/items/olcovers592/olcovers592-L.zip&file=5924387-L.jpg
+https://www.archive.org/stream/rewardsfairieswi00kipluoft?ref=ol#page/n5/mode/2up
+///////////////romance////////////////
+
+
+
+
+/////////////////children///////////////
+name : The Wonderful Wizard of Oz
+pic: https://ia802708.us.archive.org/zipview.php?zip=/3/items/olcovers633/olcovers633-L.zip&file=6335776-L.jpg
+https://www.archive.org/stream/wonderfulwizardo00baumiala?ref=ol#page/n3/mode/2up
+
+
+
+name :Jude the obscure 
+pic :https://ia800802.us.archive.org/zipview.php?zip=/11/items/olcovers590/olcovers590-L.zip&file=5901201-L.jpg
+https://www.archive.org/stream/judeobscure00hard?ref=ol#page/n5/mode/2up
+
+
+name: What Katy did
+pic: https://ia600805.us.archive.org/zipview.php?zip=/16/items/olcovers10/olcovers10-L.zip&file=101923-L.jpg
+https://www.archive.org/stream/katydidwhat00coolrich?ref=ol#page/n7/mode/2up
+
+name: Matilda
+pic: https://ia800805.us.archive.org/zipview.php?zip=/16/items/olcovers10/olcovers10-L.zip&file=108269-L.jpg
+https://www.archive.org/stream/tokenforchi00janeiala?ref=ol#page/n1/mode/2up
+
+
+name: The master of Ballantrae
+pic: https://ia800802.us.archive.org/zipview.php?zip=/13/items/olcovers562/olcovers562-L.zip&file=5620498-L.jpg
+https://www.archive.org/stream/cu31924075754287?ref=ol#page/n5/mode/2up
+//////////////////children///////////////////////////
+
+
+
+/////////////////////////////////////////////////////////biography//////////////////
+name:Greek lives from Plutarch 
+pic: https://ia800803.us.archive.org/zipview.php?zip=/22/items/olcovers557/olcovers557-L.zip&file=5574443-L.jpg
+https://www.archive.org/stream/greeklivesfrompl00plutuoft?ref=ol#page/n5/mode/2up
+
+name: The life and voyages of Christopher Columbus
+pic: https://ia800809.us.archive.org/zipview.php?zip=/11/items/olcovers585/olcovers585-L.zip&file=5858465-L.jpg 
+https://www.archive.org/stream/cihm_38156?ref=ol#page/n11/mode/2up
+
+
+name: Autobiography
+pic:https://ia800806.us.archive.org/zipview.php?zip=/33/items/olcovers556/olcovers556-L.zip&file=5560607-L.jpg
+https://www.archive.org/stream/a592818300milluoft?ref=ol#page/n7/mode/2up
+
+name: John Barleycorn
+pic:https://ia800806.us.archive.org/zipview.php?zip=/31/items/olcovers11/olcovers11-L.zip&file=119462-L.jpg
+https://www.archive.org/stream/johnbarleycornor00londrich?ref=ol#page/n7/mode/2up
+
+
+name:Far away and long ago.
+pic:https://ia800807.us.archive.org/zipview.php?zip=/28/items/olcovers78/olcovers78-L.zip&file=782468-L.jpg
+https://www.archive.org/stream/farawayandlonga00hudsgoog?ref=ol#page/n8/mode/2up
+
+/////////////////////////////////////////////////////////biography//////////////////
+
+ -->
