--- a/client/index.html
+++ b/client/index.html
@@ -29,6 +29,7 @@
 					<li><a href="#/orders">Orders</a>
 					</li>
 					<li><a href="#/books/add2">books</a>
+					<!-- <li><a href="#/books/add2">books</a> -->
 					</li>
 					<li ng-model="search" >     
 				<form class="navbar-form navbar-left">
