--- a/client/app/account/showbooks.html
+++ b/client/app/account/showbooks.html
@@ -21,6 +21,8 @@
           <p style="color:#380001">simple description :</p>
           <p>{{books.description}}</p>
         </div>
+        <button ng-click="deleteBook(books)">Delete</button>
+        <button ng-click="updateButton(books)">Update</button>
       </div>
     </div>
   </div>
