--- a/client/index.html
+++ b/client/index.html
@@ -26,7 +26,7 @@
 					</li>
 					<li><a href="#/orders">Orders</a>
 					</li>
-					<li><a href="#/books/add2">books</a>
+					<li><a href="#/books/add">books</a>
 					</li>
 					<li><a href="#/signin">SignIn</a>
 					</li>
