--- a/client/app/account/aboutus.html
+++ b/client/app/account/aboutus.html
@@ -37,11 +37,11 @@
 <div map-lazy-load="https://maps.google.com/maps/api/js?key=AIzaSyCbzxz8MTo6G_tIkvrgqf3dfyFoqpshIwA&callback=initMap"
   map-lazy-load-params="{{googleMapsUrl}}">
   <ng-map id="map-canvas" center="31.970,35.832" zoom="15">
-  <marker position="31.970,35.832"
-          on-click="vm.toggleBounce()"
-          animation="DROP"
-          ></marker>
-    <marker id="pos" position="31.972254, 35.8319246" icon="rbk.png">
+  
+     <marker id="pos" position="31.970,35.832" icon="logo.png"  title="BookStore">
+    </marker>
+         
+    <marker id="pos" position="31.972254, 35.8319246" icon="rbk.png" title="RBK">
     </marker>
 </div>
 </div>
