--- a/client/index.html
+++ b/client/index.html
@@ -1,16 +1,25 @@
-<!DOCTYPE html>
 <html>
 <head>
 	<title>Book Shop</title>
 	<meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
 	<link rel='stylesheet prefetch' href='http://fonts.googleapis.com/css?family=Open+Sans:600'>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCbzxz8MTo6G_tIkvrgqf3dfyFoqpshIwA&callback=initMap"></script>
-    
-	<link rel="stylesheet" href="style/style.css">
+	<link rel="stylesheet" href="style/	style.css">
 	<link rel="stylesheet" type="text/css" href="style/bootstrap/css/bootstrap.min.css"/>
-	<!-- <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"> -->
+	<link rel="icon" type="image/png" href="app/main/img/favicon-32x32.png" sizes="32x32" />
 </head>
+<!-- logo -->
 <body ng-app='books'>
+<div class="row">
+    <div class="col-sm-6 col-md-3">
+      <img alt="Brand" src="app/main/img/logo.png" class="logo" >
+    </div>
+  
+  <div class="row">
+    <div class="col-sm-6 col-md-3">
+      <img alt="sign" src="" class="img-left">
+    </div>
+  </div>
+</div>
 	<!-- <div class="container"></div> -->
 	<div id="custom-bootstrap-menu" class="navbar navbar-default " role="navigation">
 		<div class="container">
@@ -20,7 +29,7 @@
 			</div>
 			<div class="collapse navbar-collapse navbar-menubuilder">
 				<ul class="nav navbar-nav navbar-left">
-					<li checked><a href="#/main">Home</a>
+					<li ><a href="#/main">Home</a>
 					</li>
 					<li><a href="#/aboutus">About Us</a>
 					</li>
@@ -28,7 +37,7 @@
 					</li>
 					<li><a href="#/orders">Orders</a>
 					</li>
-					<li><a href="#/books/add2">books</a>
+					<li><a href="#/books/add">books</a>
 					</li>
 					<li><a href="#/signin">SignIn</a>
 					</li>
@@ -46,12 +55,7 @@
 		</div>
 	</div>
 	<ng-view></ng-view>
-	<style>
-		.bg-4 {
-			background-color: #2f2f2f ;
-			color: #ffffff ;
-		}
-	</style>
+	
 	<footer class="container-fluid bg-4 text-center">
 		<p>BookStore Made By Rbk.org</p>
 	</footer>
@@ -60,8 +64,8 @@
 	<!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script> -->
 	<!-- Latest compiled JavaScript -->
 	<!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script> -->
-    <script src="https://maps.googleapis.com/maps/api/js?sensor=false"></script>
-<script src="http://maps.google.com/maps/api/js"></script>
+   <!--  <script src="https://maps.googleapis.com/maps/api/js?sensor=false"></script> -->
+     <script src="http://maps.google.com/maps/api/js"></script>
 	<script src="style/bootstrap/js/bootstrap.min.js"></script>
 	<script src="lib/jquery.js"></script>
 	<script src="lib/angular/angular.js"></script>
@@ -74,9 +78,9 @@
 	<script src="app/main/main.js"></script>
 	<script src="app/services.js"></script>
 	<script src="app/app.js"></script>
-	<!-- <script src="/bower_components/ngmap/build/scripts/ng-map.min.js"></script> -->
-	<script src="http://rawgit.com/allenhwkim/angularjs-google-maps/master/build/scripts/ng-map.min.js"></script>
-	<script src="app/main/js/jssor.slider-22.2.6.mini.js" type="text/javascript"></script>
+	<script src="/bower_components/ngmap/build/scripts/ng-map.min.js"></script>
+	<!-- <script src="http://rawgit.com/allenhwkim/angularjs-google-maps/master/build/scripts/ng-map.min.js"></script> -->
+	<!-- <script src="app/main/js/jssor.slider-22.2.6.mini.js" type="text/javascript"></script> -->
 	
 </body>
 </html>
