--- a/client/app/account/signup.html
+++ b/client/app/account/signup.html
@@ -1,37 +1,73 @@
-<div class="login-wrap">
-	<div class="login-html">
-<div ng-model="msg" style="color: red">{{ msg }}</div>
-		<input id="tab-2" type="radio" name="tab" class="sign-up" checked><label for="tab-2" class="tab">Sign Up</label>
-		<div class="login-form">		
-			<form ng-submit='signup()'>
-				<div class="sign-up-htm">
-					<div class="group">
-						<label for="user" class="label">Username</label>
-						<input id="user" type="text" class="input" ng-model='user.username'>
-					</div>
-					<div class="group">
-						<label for="pass" class="label">Password</label>
-						<input id="pass" type="password" class="input" data-type="password" ng-model='user.password'>
-					</div>
-					<div class="group">
-						<label for="pass" class="label">Phone</label>
-						<input id="pass" type="text" class="input" ng-model='user.phone'>
-					</div>
-					<div class="group">
-						<label for="pass" class="label">Address</label>
-						<input id="pass"  class="input" ng-model='user.address'>
-					</div>
-					<div class="group">
-						<label for="pass" class="label">Email Address</label>
-						<input id="pass" type="Email" class="input" ng-model='usr.emailAddress'>
-					</div>
-					<div class="group">
-						<input type="submit" class="button" value="Sign Up">
-					</div>
-					<div class="hr"></div>			
+<div class="container">
+	<div class="omb_login">
+		<div style="color: red"  ng-model="msg">{{ msg }}</div>
+		<div class="omb_login">
+			<h3 class="omb_authTitle">Sign Up</h3>
+			<div class="row omb_row-sm-offset-3 omb_socialButtons">
+			</div>
+			<div class="row omb_row-sm-offset-3 omb_loginOr">
+				<div class="col-xs-12 col-sm-6">
+					<hr class="omb_hrOr">
 				</div>
+			</div>
+		<div class="row omb_row-sm-offset-3">
+			<div class="col-xs-12 col-sm-6">  
+				<form class="omb_loginForm" ng-submit='signup()'>
+			<div class="input-group">
+					<span class="input-group-addon"><i class="fa fa-envelope fa" aria-hidden="true"></i></span>
+					<input type="text" class="form-control" name="username" placeholder="Username"  ng-model='user.username'>
+				</div>
+            <div class="input-group">
+					<span class="input-group-addon"><i class="fa fa-envelope fa" aria-hidden="true"></i></span>
+					<input type="password" class="form-control" name="password" placeholder="Password"  data-type="password" ng-model='user.password'>
+				</div>
+				<div class="input-group">
+					<span class="input-group-addon"><i class="fa fa-envelope fa" aria-hidden="true"></i></span>
+					<input type="text" class="form-control" name="phone" placeholder="Phone"  ng-model='user.phone'>
+				</div>
+				<div class="input-group">
+					<span class="input-group-addon"><i class="fa fa-envelope fa" aria-hidden="true"></i></span>
+					<input type="text" class="form-control" name="address" placeholder="Address"   ng-model='user.address'>
+				</div>
+				<div class="input-group">
+					<span class="input-group-addon"><i class="fa fa-envelope fa" aria-hidden="true"></i></span>
+					<input type="Email" class="form-control" name="address" placeholder="Email"   ng-model='user.emailAddress'>
+				</div>
+				<!-- <div class="group">
+					<label for="user" class="label">Username</label>
+					<input id="user" type="text" class="input" ng-model='user.username'>
+				</div> -->
+				<!-- <div class="group">
+					<label for="pass" class="label">Password</label>
+					<input id="pass" type="password" class="input" data-type="password" ng-model='user.password'>
+				</div> -->
+
+				<!-- <div class="group">
+					<label for="pass" class="label">Phone</label>
+					<input id="pass" type="text" class="input" ng-model='user.phone'>
+				</div> -->
+				<!-- <div class="group">
+					<label for="pass" class="label">Address</label>
+					<input id="pass"  class="input" ng-model='user.address'>
+				</div>
+				<div class="group">
+					<label for="pass" class="label">Email Address</label>
+					<input id="pass" type="Email" class="input" ng-model='usr.emailAddress'>
+				</div> -->
+				<span class="help-block"></span>
+					<button  class="btn btn-default btn-lg btn-block" type="submit" value="Sign Up"></a>Sign Up</button>
+
+				<!-- <div class="group">
+					<input type="submit" class="button" value="Sign Up">
+				</div>
+				<div class="hr"></div>			
+			</div> -->
 			</form>
 		</div>
 	</div>
+	<div class="row omb_row-sm-offset-3">
+			</div>
+</div>
+</div>
 </div>
 
