--- a/client/app/account/showbooks.html
+++ b/client/app/account/showbooks.html
@@ -1,7 +1,7 @@
 <!-- html page for show book -->
 <div class="panel panel-default" ng-init="showBook()">
-<div class="panel-heading" style="background-color: #420606"> </div>
-  <div class="panel-heading" style="background-color: #09091e"> 
+<div class="panel-heading" style="background-color: #A57E25"> </div>
+  <div class="panel-heading" style="background-color: #7B003A"> 
     <h3 class="panel-title" style="color: white; text-align: center;">Latest Books</h3>
   </div>
     <div class="panel-body">
