--- a/client/app/account/signin.html
+++ b/client/app/account/signin.html
@@ -1,29 +1,35 @@
-<div class="login-wrap">
-	<div class="login-html">
-	<div style="color: red"  ng-model="msg">{{ msg }}</div>
-		<input id="tab-2" type="radio" name="tab" class="sign-up" checked>
-		<label for="tab-2" class="tab">Sign In</label>
-		<div class="login-form" >
-			<div></div>
-			<div class="sign-up-htm">
-				<form ng-submit='signin()'>
-
-					<div class="group">
-						<label for="user" class="label">Username</label>
-						<input id="user" type="text" class="input"  ng-model='user.username'>
+<div class="container">
+	<div class="omb_login">
+		<div style="color: red"  ng-model="msg">{{ msg }}</div>
+		<div class="omb_login">
+			<h3 class="omb_authTitle">Sign In </h3>
+			<div class="row omb_row-sm-offset-3 omb_socialButtons">
+			</div>
+			<div class="row omb_row-sm-offset-3 omb_loginOr">
+				<div class="col-xs-12 col-sm-6">
+					<hr class="omb_hrOr">
+				</div>
+			</div>
+		<div class="row omb_row-sm-offset-3">
+			<div class="col-xs-12 col-sm-6">  
+				<form class="omb_loginForm" ng-submit='signin()'>
+					<div class="input-group">
+						<span class="input-group-addon"><i class="fa fa-envelope fa" aria-hidden="true"></i></span>
+						<input type="text" class="form-control" name="username" placeholder="email address"  ng-model='user.username'>
 					</div>
+					<span class="help-block"></span>
 
-					<div class="group">
-						<label for="pass" class="label">Password</label>
-						<input id="pass" type="password" class="input" data-type="password" ng-model='user.password'>
+					<div class="input-group">
+						<span class="input-group-addon"><i class="fa fa-lock"></i></span>
+						<input type="password" class="form-control" name="password" placeholder="Password" ng-model='user.password'>
 					</div>
-
-					<div class="group">
-						<input type="submit" class="button" value="Log in">
-					</div>
-					<div class="hr"></div>
+					<span class="help-block"></span>
+					<button  class="btn btn-default btn-lg btn-block" type="submit" value="Log in"></a>Log in</button>
 				</form>
 			</div>
+		</div>
+			<div class="row omb_row-sm-offset-3">
+			</div>        
 		</div>
 	</div>
 </div>
