--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -1,7 +1,6 @@
 <div class="head">
 <img src="app/main/img/slider.jpg" class="img-responsive" style="width:100% ">
 </div>
-
 <!-- <div class="bgimg">
 <h3 class="headers1">The best online books only for you</h3>
 </div> -->
@@ -16,29 +15,34 @@
     ">Some Products</h3>
   <div class="row">
       <div class="col-md-4" >
-          <p>The Da Vinci Code</p>
+          <p>Lee Child</p>
           <img src="app/main/img/4.jpg" class="img-responsive" style="width:70% ">
       </div>
+
       <div class="col-md-4">
-          <p>Inferno</p>
+          <p>The DaVinci Code</p>
           <img src="app/main/img/5.jpg" class="img-responsive" style="width:70%" >
       </div>
       <div class="col-md-4"> 
-          <p>The Words of War</p>
+          <p>Lee Child Tripwire</p>
           <img src="app/main/img/6.jpg" class="img-responsive" style="width:70%" >
       </div>
+      <div style="color:white;">line</div>
+
       <div class="col-md-4" >
-          <p>The Da Vinci Code</p>
+          <p>Angels & Demons</p>
           <img src="app/main/img/7.jpg" class="img-responsive" style="width:70% ">
       </div>
       <div class="col-md-4">
-          <p>Inferno</p>
+          <p>The Hunger Games</p>
           <img src="app/main/img/8.jpg" class="img-responsive" style="width:70%" >
       </div>
       <div class="col-md-4"> 
-          <p>The Words of War</p>
+          <p>Gone Girl</p>
           <img src="app/main/img/9.jpg" class="img-responsive" style="width:70%" >
       </div>
+      <div style="color:white;">line</div>
+    
       <div class="col-md-4" >
           <p>The Da Vinci Code</p>
           <img src="app/main/img/1.jpg" class="img-responsive" style="width:70% ">
