--- a/client/index.html
+++ b/client/index.html
@@ -7,7 +7,6 @@
     <link rel="icon" type="image/png" href="app/main/img/favicon-32x32.png" sizes="32x32" />
 	<link rel="stylesheet" href="style/style.css">
 	<link rel="stylesheet" type="text/css" href="style/bootstrap/css/bootstrap.min.css"/>
-	<!-- <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"> -->
 </head>
 <body ng-app='books'>
 	<!-- logo -->
@@ -25,7 +24,7 @@
 	<!-- <div class="container"></div> -->
 	<div id="custom-bootstrap-menu" class="navbar navbar-default " role="navigation">
 		<div class="container">
-			<div class="navbar-header"><a class="navbar-brand" href="#">Bookstore </a>
+			<div class="navbar-header"><a class="navbar-brand">Bookstore </a>
 				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-menubuilder"><span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
 				</button>
 			</div>
