--- a/client/app/account/aboutus.html
+++ b/client/app/account/aboutus.html
@@ -10,11 +10,9 @@
   content and the style and to add more options including on site reading and free downloading .
   
   </div>
-  <div class="col-md-2"></div>
   
-
- 
 </div>
+<hr>
 <div id="map" style="width:800px; margin:0 auto;">
 <div map-lazy-load="https://maps.google.com/maps/api/js?key=AIzaSyCbzxz8MTo6G_tIkvrgqf3dfyFoqpshIwA&callback=initMap"
   map-lazy-load-params="{{googleMapsUrl}}">
@@ -28,20 +26,17 @@
 </div>
 </div>
 
- <hr> <p style="    text-align: center;
+ <hr> <p style=" text-align: center;
     background-color: beige;
-    font-size: large;
-    font-family: -webkit-pictograph;
-    color: brown;">Amman-jordan King hussein business park</p><hr>
+    ;
+    color: #B88B29;">Amman-jordan King hussein business park</p><hr>
 <div class="row" style="text-align: center;">
-  <img src="app/main/img/about.jpg" class="img-circle" height="207px">
+  <img src="app/main/img/about.jpg"  width="700" height="400">
   <hr>
 
- <p>
+ <p style="color:#7A103C;">
       any one can give help to develope this App , so please
-    
      feel free to contact us via our Email: ammanshopbooks@gmail.com  
-
  </p>
 </div>
 </div>
