--- a/client/index.html
+++ b/client/index.html
@@ -3,6 +3,7 @@
 	<title>Book Shop</title>
 	<meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
 	<link rel='stylesheet prefetch' href='http://fonts.googleapis.com/css?family=Open+Sans:600'>
+	<script src ="http://maps.google.com/maps/api/js?sensor=false" type="text/javascript"></script>
     <!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCbzxz8MTo6G_tIkvrgqf3dfyFoqpshIwA&callback=initMap"></script> -->
     <link rel="icon" type="image/png" href="app/main/img/favicon-32x32.png" sizes="32x32" />
 	<link rel="stylesheet" href="style/style.css">
@@ -71,7 +72,7 @@
 		<br>
 	</footer>
 
-    <script src="http://maps.google.com/maps/api/js"></script>
+    <!-- <script src="http://maps.google.com/maps/api/js"></script> -->
 	<script src="style/bootstrap/js/bootstrap.min.js"></script>
 	<script src="lib/jquery.js"></script>
 	<script src="lib/angular/angular.js"></script>
