--- a/client/app/account/aboutus.html
+++ b/client/app/account/aboutus.html
@@ -1,3 +1,4 @@
+
 <div class="container">
 <div class="row" style="text-align: center">
   <div class="col-md-2"></div>
@@ -13,15 +14,19 @@
   
 </div>
 <hr>
-<div id="map" style="width:800px; margin:0 auto;">
+
+<div id="map-n" ></div>
+
 <!-- <div map-lazy-load="https://maps.google.com/maps/api/js?key=AIzaSyCbzxz8MTo6G_tIkvrgqf3dfyFoqpshIwA&callback=initMap"
-  map-lazy-load-params="{{googleMapsUrl}}"> -->
+  map-lazy-load-params="{{googleMapsUrl}}">
   <ng-map id="map-canvas" center="31.970,35.832" zoom="15">
+  
      <marker id="pos" position="31.970,35.832" icon="logo.png"  title="BookStore">
-    </marker>  
+    </marker>
+         
     <marker id="pos" position="31.972254, 35.8319246" icon="rbk.png" title="RBK">
     </marker>
-</div>
+</div> -->
 </div>
 
  <hr> <p style=" text-align: center;
@@ -39,3 +44,14 @@
 </div>
 </div>
 
+<script type="text/javascript"> 
+function initialize() { 
+    var mapProp = { 
+        center: new google.maps.LatLng(31.970,35.832), 
+        zoom: 15, 
+        mapTypeId: google.maps.MapTypeId.ROADMAP 
+    }; 
+    var map = new google.maps.Map(document.getElementById("map-n"), mapProp);
+} 
+google.maps.event.addDomListener(window, 'load', initialize); 
+</script>
