--- a/client/app/account/aboutus.html
+++ b/client/app/account/aboutus.html
@@ -15,9 +15,9 @@
 </div>
 <hr>
 
-<div id="map-n" ></div>
+<!-- <div id="map-n" ></div> -->
 
-<!-- <div map-lazy-load="https://maps.google.com/maps/api/js?key=AIzaSyCbzxz8MTo6G_tIkvrgqf3dfyFoqpshIwA&callback=initMap"
+<div map-lazy-load="https://maps.google.com/maps/api/js?key=AIzaSyCbzxz8MTo6G_tIkvrgqf3dfyFoqpshIwA&callback=initMap"
   map-lazy-load-params="{{googleMapsUrl}}">
   <ng-map id="map-canvas" center="31.970,35.832" zoom="15">
   
@@ -26,7 +26,7 @@
          
     <marker id="pos" position="31.972254, 35.8319246" icon="rbk.png" title="RBK">
     </marker>
-</div> -->
+</div>
 </div>
 
  <hr> <p style=" text-align: center;
@@ -44,7 +44,7 @@
 </div>
 </div>
 
-<script type="text/javascript"> 
+<!-- <script type="text/javascript"> 
 function initialize() { 
     var mapProp = { 
         center: new google.maps.LatLng(31.970,35.832), 
@@ -55,3 +55,4 @@ function initialize() {
 } 
 google.maps.event.addDomListener(window, 'load', initialize); 
 </script>
+ -->
