--- a/client/index.html
+++ b/client/index.html
@@ -3,7 +3,7 @@
 	<title>Book Shop</title>
 	<meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
 	<link rel='stylesheet prefetch' href='http://fonts.googleapis.com/css?family=Open+Sans:600'>
-	<script src ="http://maps.google.com/maps/api/js?key=AIzaSyCbzxz8MTo6G_tIkvrgqf3dfyFoqpshIwA&callback=initMap" type="text/javascript"></script>
+	<script src ="http://maps.google.com/maps/api/js?key=AIzaSyAIMifWiJcU5nEvnqnjPm80wQsVLo5E2_E" type="text/javascript"></script>
     <link rel="icon" type="image/png" href="app/main/img/favicon-32x32.png" sizes="32x32" />
 	<link rel="stylesheet" href="style/style.css">
 	<link rel="stylesheet" type="text/css" href="style/bootstrap/css/bootstrap.min.css"/>
@@ -86,8 +86,6 @@
 	
 </body>
 </html>
-
-
 <script type="text/javascript">
 		if(localStorage.getItem('user.book')){
 		$('#UserName').html(localStorage.getItem('user.book')).css("color", "#7B003A");	
